fixed some alignment with the label over pictures on portfolio page.

--- a/style.css
+++ b/style.css
@@ -10,10 +10,22 @@ footer{
     border-top: 8px solid #6b5b95;
     padding-top: 15px;
 }
-img {
+.picture-of-me {
     height: 200px;
     width: 200px;
 }
+.port-img {
+    position: relative;
+    margin: 20px;
+    display: block;
+    width: 200px;
+    height: 300px;
+    z-index: 0;
+}
+.port-img2 {
+    margin-bottom: -70px;
+}
+
 article {
     display: flex;
     flex-wrap: wrap;
@@ -77,24 +89,15 @@ article {
     margin: 0 auto;
     text-align: center;
 }
-.portfolio-img {
-    display: block;
-    position: relative;
-    margin: 20px;
-    width: 300px;
-    height: 300px;
-}
-
 .caption {
     display: block;
-    position: absolute;
     text-align: center;
     background-color: #303b61;
     top: 70%;
     width: 100%;
     color: #d6d6d6;
-    height: 0px;
     font-size: 20px;
     padding-top: 15px;
     height: 40px;
+    z-index: 1;
 }
